SFUSA/force-app/main/default/objects/POS_Customization__c/fields/Account_Name__c.field-meta.xml
<CustomField>
        <fullName>Account_Name__c</fullName>
        <formula>Barrel__r.Case__r.Retail_Account__r.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </CustomField>