SFUSA/force-app/main/default/objects/POS_Customization__c/fields/Attention__c.field-meta.xml
<CustomField>
        <fullName>Attention__c</fullName>
        <label>Attention</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>