SFUSA/force-app/main/default/objects/POS_Customization__c/fields/Barrel_Order_Id__c.field-meta.xml
<CustomField>
        <fullName>Barrel_Order_Id__c</fullName>
        <description>External Id used in old single barrel website</description>
        <externalId>true</externalId>
        <label>Barrel Order Id</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>