SFUSA/force-app/main/default/objects/POS_Customization__c/fields/Case__c.field-meta.xml
<CustomField>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>POS Customizations</relationshipLabel>
        <relationshipName>POS_Customizations</relationshipName>
        <type>Lookup</type>
    </CustomField>