SFUSA/force-app/main/default/objects/POS_Customization__c/fields/Floor__c.field-meta.xml
<CustomField>
        <fullName>Floor__c</fullName>
        <formula>TEXT(Barrel__r.Floor__c)</formula>
        <label>Floor</label>
        <type>Text</type>
    </CustomField>