SFUSA/force-app/main/default/objects/POS_Customization__c/fields/Get_Insert_Text_From__c.field-meta.xml
<CustomField>
        <fullName>Get_Insert_Text_From__c</fullName>
        <label>Get Insert Text From</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bottle Label Text</fullName>
                </value>
                <value>
                    <fullName>Account Name</fullName>
                </value>
                <value>
                    <fullName>Bottle Text</fullName>
                    <isActive>false</isActive>
                    <label>Bottle Text</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>