SFUSA/force-app/main/default/objects/POS_Customization__c/fields/Include_Stave_Selection_on_Label__c.field-meta.xml
<CustomField>
        <fullName>Include_Stave_Selection_on_Label__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Include the number of staves selected on the back label of the bottle for Makers Mark</description>
        <inlineHelpText>Include the number of staves selected on the back label of the bottle for Makers Mark</inlineHelpText>
        <label>Include Stave Selection on Label</label>
        <type>Checkbox</type>
    </CustomField>