SFUSA/force-app/main/default/objects/POS_Customization__c/fields/Insert_Text__c.field-meta.xml
<CustomField>
        <fullName>Insert_Text__c</fullName>
        <label>Insert Text</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>