SFUSA/force-app/main/default/objects/POS_Customization__c/fields/Street__c.field-meta.xml
<CustomField>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </CustomField>