SFUSA/force-app/main/default/objects/POS_Customization__c/fields/Tier__c.field-meta.xml
<CustomField>
        <fullName>Tier__c</fullName>
        <formula>TEXT(Barrel__r.Tier__c)</formula>
        <label>Tier</label>
        <type>Text</type>
    </CustomField>