SFUSA/force-app/main/default/objects/POS_Customization__c/fields/Uploaded_Date__c.field-meta.xml
<CustomField>
        <fullName>Uploaded_Date__c</fullName>
        <label>Uploaded Date</label>
        <type>DateTime</type>
    </CustomField>