SFUSA/force-app/main/default/objects/POS_Customization__c/recordTypes/Full_Barrel.recordType-meta.xml
<RecordType>
        <fullName>Full_Barrel</fullName>
        <active>true</active>
        <label>Full Barrel</label>
    </RecordType>