SFUSA/force-app/main/default/objects/POS_Customization__c/recordTypes/Split_Barrel.recordType-meta.xml
<RecordType>
        <fullName>Split_Barrel</fullName>
        <active>true</active>
        <label>Split Barrel</label>
    </RecordType>