SFUSA/force-app/main/default/objects/POS_Customization__c/listViews/Cruzan_Single_Barrel_POS_Customization.listView-meta.xml
<ListView>
        <fullName>Cruzan_Single_Barrel_POS_Customization</fullName>
        <filterScope>Queue</filterScope>
        <label>Cruzan - Single Barrel</label>
        <queue>Cruzan_Single_Barrel</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>