SFUSA/force-app/main/default/objects/POS_Customization__c/listViews/Knob_Creek_Single_Barrel_POS_Customization.listView-meta.xml
<ListView>
        <fullName>Knob_Creek_Single_Barrel_POS_Customization</fullName>
        <filterScope>Queue</filterScope>
        <label>Knob Creek - Single Barrel</label>
        <queue>Knob_Creek_Single_Barrel</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>