SFUSA/force-app/main/default/objects/POS_Customization__c/listViews/Makers_Mark_Single_Barrel_POS_Customization.listView-meta.xml
<ListView>
        <fullName>Makers_Mark_Single_Barrel_POS_Customization</fullName>
        <filterScope>Queue</filterScope>
        <label>Makers Mark - Single Barrel</label>
        <queue>Makers_Mark_Single_Barrel</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>